[tool.poetry]
name = "handbook"
version = "0.1.0"
description = "Programming Course for Engineers"
authors = ["Yves Chevallier <yves.chevallier@heig-vd.ch>"]
package-mode = false
license = "CC BY-NC-SA 4.0"
readme = "README.md"
keywords = ["mkdocs", "python", "academic", "course"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: MkDocs",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: French",
    "Programming Language :: C",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]

[tool.poetry.dependencies]
cairosvg = ">=2.7.1"
chalk-diagrams = ">=0.2.2"
deepmerge = ">=1.1.1"
inflection = ">=0.5.1"
ipdb = ">=0.13.13"
markdown-exec = ">=1.9.3"
mike = ">=2.1.2"
mkdocs = ">=1.6.0"
mkdocs-autorefs = ">=1.0.1"
mkdocs-awesome-pages-plugin = ">=2.9.2"
mkdocs-caption = ">=1.2.0"
mkdocs-charts-plugin = ">=0.0.10"
mkdocs-codeinclude-plugin = ">=0.2.1"
mkdocs-drawio-exporter = ">=0.9.1"
mkdocs-enumerate-headings-plugin = ">=0.6.2"
mkdocs-extract-listings-plugin = ">=0.1.3"
mkdocs-get-deps = ">=0.2.0"
mkdocs-git-authors-plugin = ">=0.9.0"
mkdocs-git-committers-plugin-2 = ">=2.3.0"
mkdocs-git-revision-date-localized-plugin = ">=1.2.6"
mkdocs-glightbox = ">=0.4.0"
mkdocs-htmlproofer-plugin = ">=1.2.1"
mkdocs-jupyter = ">=0.24.7"
mkdocs-material = { git = "git@github.com:heig-tin-info/mkdocs-material-insiders.git" }
mkdocs-minify-plugin = ">=0.8.0"
mkdocs-plugin-exercises = { git = "https://github.com/yves-chevallier/mkdocs-exercise.git" }
mkdocs-snippets = ">=1.3.0"
mkdocs-toggle-sidebar-plugin = ">=0.0.3"
pillow = ">=10.4.0"
# until official support has been added (Pillow/pull/5201)
pillow-avif-plugin = ">=1.4.6"
pngquant = ">=1.0.8"
pydantic = ">=2.8.2"
pypdf = ">=4.3.1"
python = "^3.10"
ruamel-yaml = ">=0.18.6"
toolz = ">=0.12.1"
unidecode = ">=1.3.8"
voluptuous = ">=0.15.2"
wikipedia-api = ">=0.6.0"
mkdocs-epigraph = "^0.5.1"
mkdocs-pills = "^0.1.0"
mkdocs-drawio = "^1.8.0"

[tool.poetry.group.dev.dependencies]
black = "24.8.0"
ruff = "0.5.7"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
