[project]
name = "handbook"
description = "Programming Course for Engineers"
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = { text = "CC BY-NC-SA 4.0" }
authors = [{ name = "Yves Chevallier", email = "yves.chevallier@heig-vd.ch" }]
keywords = ["mkdocs", "python", "academic", "course"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: MkDocs",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: French",
    "Programming Language :: C",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]
dynamic = ["version"]
dependencies = [
    "cairosvg>=2.8.2,<3.0.0",
    "chalk-diagrams>=0.2.2,<0.3.0",
    "deepmerge>=2.0,<3.0.0",
    "inflection>=0.5.1,<0.6.0",
    "markdown-exec>=1.11.0,<2.0.0",
    "mike>=2.1.3,<3.0.0",
    "mkdocs>=1.6.1,<2.0.0",
    "mkdocs-autorefs>=1.4.3,<2.0.0",
    "mkdocs-awesome-pages-plugin>=2.10.1,<3.0.0",
    "mkdocs-caption>=1.3.0,<2.0.0",
    "mkdocs-charts-plugin>=0.0.13,<0.0.14",
    "mkdocs-codeinclude-plugin>=0.2.1,<0.3.0",
    "mkdocs-drawio @ git+https://github.com/yves-chevallier/mkdocs-drawio.git@testounet",
    "mkdocs-drawio-exporter>=0.10.2,<0.11.0",
    "mkdocs-enumerate-headings-plugin>=0.6.2,<0.7.0",
    "mkdocs-epigraph>=0.5.1,<0.6.0",
    "mkdocs-extract-listings-plugin>=0.2.1,<0.3.0",
    "mkdocs-get-deps>=0.2.0,<0.3.0",
    "mkdocs-git-authors-plugin>=0.10.0,<0.11.0",
    "mkdocs-git-committers-plugin-2>=2.5.0,<3.0.0",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7,<2.0.0",
    "mkdocs-glightbox>=0.5.1,<0.6.0",
    "mkdocs-htmlproofer-plugin>=1.3.0,<2.0.0",
    "mkdocs-material>=9.5.0,<10.0.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-pills>=0.1.0,<0.2.0",
    "mkdocs-plugin-exercises @ git+https://github.com/yves-chevallier/mkdocs-exercise.git",
    "mkdocs-snippets>=1.3.2,<2.0.0",
    "mkdocs-toggle-sidebar-plugin>=0.0.8,<0.0.9",
    "pillow>=11.3.0,<12.0.0",
    # pillow-avif-plugin>=1.4.6
    "pngquant>=3.0.3,<4.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "pypdf>=6.4.0,<7.0.0",
    "ruamel-yaml>=0.18.15,<0.19.0",
    "unidecode>=1.4.0,<2.0.0",
    "voluptuous>=0.15.2,<0.16.0",
    "wikipedia-api>=0.8.1,<0.9.0",
    "mkdocs-wikipedia>=0.1.0,<0.2.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.9.0,<26.0.0",
    "ruff>=0.14.0,<0.15.0",
    "ipdb>=0.13.13,<0.14.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = []
only-include = ["README.md"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
